# MMA

./: .gitignore  CMakeLists.txt  MULTIMODAL_README.md  README.md  generated.bvh  keyfindings.md  pixi.toml  reproduce_crash.py
.agent/rules/: rules.md
.agent/workflows/: guide.md
cmu_data/: README.md  downloader.py  run_downloader.py
cmu_data/tmps/: bvh_analyzer.py  mb_script.py
core/: BVH.cpp  BVH.h  Character.cpp  Character.h  DARTHelper.cpp  Environment.cpp  Environment.h  MotionLibrary.cpp  MotionLibrary.h  Muscle.cpp  Muscle.h  Verbose.cpp  Verbose.h
data/: human.xml  human.xml.backup  human_cmu.xml  metadata_16_01.txt  metadata_29_01.txt  metadata_backflip.txt  metadata_backflip_test_multi.txt  metadata_balance.txt  metadata_cart.txt  metadata_cmu.txt  metadata_dance.txt  metadata_kick_test_multi.txt  metadata_pirouette.txt  metadata_walk_fullbody_test_multi.txt  motion_list.txt  split.json
data/motion/: 16_01.bvh  16_01_.bvh  29_01.amc  29_01.bvh  29_01_.amc  29_01_.bvh  29_01_mass.bvh  _29_01.bvh  test.bvh  test_py_walk.bvh  test_py_walk_fixed.bvh  walk_.bvh
data/tmp_motion/: cmu_walk.bvh
docs/: ALGORITHM_EXPLANATION.md  CURRICULUM_README.md  EVALUATION_GUIDE.md  OPTIMIZATION_NOTES.md  PRETRAINING_TO_RL_GUIDE.md  RL_VS_SUPERVISED.md  TEST_PIPELINE_ANALYSIS.md  VISUALIZATION.md  debug.logs  profile.prof  profile.py
python/: EnvManager.cpp  EnvManager.h  Model.py  PPO.py  bvh_analyzer.py  bvh_hirarchy_analyzer.py  bvh_retargetter.py  curriculum_manager.py  main.py  main_bvh.py  main_multimodal.py  multimodal_env.py  rl_utils.py  tensorboard_wsl.py  test_motion_library.py  utils.py
python/amc2bvh/: README.md  __init__.py  __main__.py  amc_parser.py  asf_parser.py  batch_amc2bvh.py  bvh_parser.py  bvh_visualizer.py  bvh_writer.py  config.py  data_structs.py  diagnosis.py  main.py  quat_math.py  rot_converter.py  scrape_mocap_metadata.py  skel_converter.py  standalone.py  truncate_mocap.py
python/download_utils/: README.md  run_downloader.py
python/infer/: README.md  run_all_tests.py  test_01_model_inference.py  test_03_multimodal_env.py
python/models/: README.md  __init__.py  eval_motion.py  motion_nn.py  train_motion.py
python/tests/: evaluate_models.py  test_02_single_env.py  test_04_visualize.py  test_curriculum_integration.py
python/tmp/: README.md  downloader.py  scrape_mocap_metadata.py
python/tmps/: scan_motions.py  test_motions_incrementally.py  test_multimodal_env.py
python/utils/: README.md  __init__.py  bvh_dataset.py  bvh_visualizer.py  cmu_categories.py  datasets.py  extract_states.py  normalization.py  splits.py  state_extractor.py  verify_conversion.py
render/: main.cpp
